rejected (function: DetectHtml) them because they contained a <title> tag.

Jan 23
Upgraded Geshi plugin (input from Kamil Demecki). 

Jan 28
This version of the ctables distribution combines with and replaces the unbuntu-debian distribution.

Jan 31
In preprocessor, edit.php ca. 235ff:  Create tagged <code>. . .</code> blocks from code blocks marked
up by indentation.  This insures that the code blocks are correctly processed in the fckgLite parser.

Feb 2
convert html tag markup < and > to entities in indented code blocks
(In edit.php:_preprocess())

Feb 13
replace '>' in interwiki markup in lists, removed in above.

Removed new by reference warning  in edit.php on line 2552

Feb 14
Upgraded handling of interwiki links

6 March
Check for files and/or directories in userfiles that have not been converted into 
links to data/media or have been converted to directories (Weatherwas). If found
delete them so that the links can be created.

8 March
fix for missing XPATH functions in fckxml.js

12 March
Added Dokuwiki-style signature item to context menu.
Handle multiple footnotes with identical texts.

13 March
Added ftp option to link dialog
Put some controls into ftp liink creation.

16 March
Added missing smiley_hack metadata entry

18 March
Fixed broken internal media links in Weatherwax, which now appends file size to titl attr,
from which fckgL takes the urls.

19 March
Update to entities file.

22 March
Automated insertion of ~~COMPLEX_TABLES~~ macro when complex tables checkbox is set to true,
if not already inserted.

28 March
Fixed IE 10 JS incompatiblity
Fixed URL display line in image dialog: now  displays file name as saved, instead of encoded format.

29 March double urlencode image names for filebrowser thumbnails, which otherwise do not display in Windows.

30 March
Restored aspell Language button (when Scayt is turned off).

9 April
Removed compatibility support for pre-jquery functions.

10 April
Removed missed jquery compatibility script.